[FIX] Update Header component link class and improve text overflow handling in CSS

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,9 @@ header{
 }
 
 .publisher-videogame-text{
-  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 main{
